--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cv-online",
-  "version": "3.0.0",
+  "version": "3.1.0",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "4.2.3",
+    "sass": "^1.77.0",
     "vite": "4.4.3",
     "vue": "3.3.4"
   }
