--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   },
   "dependencies": {
     "bootstrap": "5.3.1",
+    "quasar": "^2.12.0",
+    "@quasar/extras": "^1.0.0",
     "swiper": "10.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "4.2.3",
+    "@quasar/vite-plugin": "^1.0.0",
     "sass": "^1.77.0",
     "vite": "4.4.3",
     "vue": "3.3.4"
