--- a/package.json
+++ b/package.json
@@ -11,10 +11,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "bootstrap": "5.3.1",
     "quasar": "^2.12.0",
-    "@quasar/extras": "^1.0.0",
-    "swiper": "10.1.0"
+    "@quasar/extras": "^1.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "4.2.3",
