--- a/package.json
+++ b/package.json
@@ -1,24 +1,21 @@
 {
   "name": "cv-online",
   "version": "3.1.0",
-  "private": true,
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
-    "dev:docker": "docker compose up --build",
-    "dev:docker:detach": "docker compose up --build -d",
-    "docker:stop": "docker compose down",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "quasar": "^2.12.0",
-    "@quasar/extras": "^1.0.0"
+    "quasar": "^2.18.5",
+    "@quasar/extras": "^1.17.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "4.2.3",
-    "@quasar/vite-plugin": "^1.0.0",
-    "sass": "^1.77.0",
-    "vite": "4.4.3",
-    "vue": "3.3.4"
+    "@vitejs/plugin-vue": "6.0.1",
+    "@quasar/vite-plugin": "^1.10.0",
+    "sass": "^1.93.3",
+    "vite": "7.1.12",
+    "vue": "3.5.22"
   }
 }
